<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.sikke.app.activities.AccountSettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/myAccountInformation" />

    <header
        android:fragment="com.sikke.app.activities.AccountSettingsActivity$ChangePasswordPreferenceFragment"
        android:icon="@drawable/ic_lock_black_24dp"
        android:title="@string/changePassword" />

    <header
        android:fragment="com.sikke.app.activities.AccountSettingsActivity$SecurityAccountPreferenceFragment"
        android:icon="@drawable/ic_security_black_24dp"
        android:title="@string/accountSecurity" />

    <header
        android:fragment="com.sikke.app.activities.AccountSettingsActivity$LanguagePreferenceFragment"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/language" />

</preference-headers>
