<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="#ffffffff">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/group_id"
                android:textColor="#444"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="12sp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_group_id"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/seq"
                android:textColor="#444"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="12sp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_seq"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/from"
                android:textColor="#444"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="12sp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_from"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/to"
                android:textColor="#444"
                android:gravity="right"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_to"
                android:gravity="left"
                android:textSize="11sp"
                android:textColor="#444"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/total_amount"
                android:textColor="#444"
                android:gravity="right"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_amount"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip" />
        </TableRow>


        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/desc"
                android:textColor="#444"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="12sp"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_desc"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/action_time"
                android:textColor="#444"
                android:gravity="right"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_action_time"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/complete_time"
                android:textColor="#444"
                android:gravity="right"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_complete_time"
                android:gravity="left"
                android:textSize="11sp"
                android:textColor="#444"
                android:padding="3dip" />
        </TableRow>

         <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/hash"
                android:textColor="#444"
                android:gravity="right"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_hash"
                android:gravity="left"
                android:textSize="11sp"
                android:textColor="#444"
                android:padding="3dip" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:text="@string/prev_hash"
                android:textColor="#444"
                android:gravity="right"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:id="@+id/txt_prev_hash"
                android:gravity="left"
                android:textColor="#444"
                android:textSize="11sp"
                android:padding="3dip"
                tools:ignore="RtlHardcoded" />
        </TableRow>


    </TableLayout>

</RelativeLayout>