<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/security_question_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_security_title"
            android:textStyle="bold"
            android:textColor="#444444"
            android:textSize="16sp"/>


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_security_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textFilter"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:hint="@string/pref_security_question" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_security_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:hint="@string/pref_security_answer" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/security_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_indetity_title"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#444444"
            android:textSize="16sp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_identity_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:hint="@string/pref_tc" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left">
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/avloadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:indicatorColor="@color/sikke_custom_color"
                    app:indicatorName="BallPulseIndicator" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/white"
                    android:background="@drawable/button_file"
                    android:padding="10dp"
                    android:text="@string/save" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>